Make all MacViews windows potentially draggable.

This fixes the PiP window not being draggable on Mac.

Bug: 849983
Change-Id: I1b0f503de1a1f154f23afd1870943a6b7009be75
Reviewed-on: https://chromium-review.googlesource.com/1121145
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572038}
Former-commit-id: 330fc4a13c739591b9a1cf438b6b82a8e8cde96d