ui/views/cocoa/native_widget_mac_nswindow.h
@@ -12,6 +12,24 @@
 
 @protocol WindowTouchBarDelegate;
 
+// Weak lets Chrome launch even if a future macOS doesn't have the below classes
+
+WEAK_IMPORT_ATTRIBUTE
+@interface NSNextStepFrame : NSView
+@end
+
+WEAK_IMPORT_ATTRIBUTE
+@interface NSThemeFrame : NSView
+@end
+
+VIEWS_EXPORT
+@interface NativeWidgetMacNSWindowBorderlessFrame : NSNextStepFrame
+@end
+
+VIEWS_EXPORT
+@interface NativeWidgetMacNSWindowTitledFrame : NSThemeFrame
+@end
+
 // The NSWindow used by BridgedNativeWidget. Provides hooks into AppKit that
 // can only be accomplished by overriding methods.
 VIEWS_EXPORT
